# casper-staking-rewards-core

./: .gitignore  Cargo.toml  Makefile  README.md  testnet.sh
erc20/: Cargo.toml
erc20/src/: main.rs
libs/: Cargo.toml
libs/src/: math.rs
staking-rewards/: Cargo.toml
staking-rewards/src/: lib.rs
tests/: Cargo.toml  build.rs
tests/src/: erc20.rs  lib.rs  staking_rewards.rs  tests.rs
tests/wasm/: erc20.wasm  staking_rewards.wasm
