[package]
name = "libs"
description = "Synthetix - StakingRewards used libraries written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { package = "casper-types", version="1.2" }

[lib]
name = "libs"

# enable overflow checks (similar to SafeMath in solidity)
[profile.release]
overflow-checks = true