[package]
name = "tests"
description = "Synthetix - StakingRewards contract tests written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# enable overflow checks (similar to SafeMath in solidity)
[profile.release]
overflow-checks = true